--- a/my-app/package.json
+++ b/my-app/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://arossaadhikary.github.io/arossa",
+  "homepage": "http://arossaadhikary.github.io/portfolio",
   "name": "Arossa Adhikary Portfolio",
   "version": "0.1.0",
   "private": true,
